k8s/applications/web/tmail/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tmail
  namespace: tmail
  labels:
    app.kubernetes.io/name: tmail
    app.kubernetes.io/part-of: web
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: tmail
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
